# TETRIS

./: .gitignore  README.md
.github/workflows/: release.yml
tetris/: CMakeLists.txt  Makefile  PKGBUILD
tetris/include/: shaders.h  sound.h  tetris.h
tetris/src/: main.c
